# tgp-krill-kounter

./: .clang-format  CMakeLists.txt  CodingStyle.md  DaemonReadme.md  LibraryReadme.md  README.md  ReleaseNotes.md
examples/: test-sd-reference.json
src/: main.cc
src/daemon/: cJsonParser.cc  cJsonParser.hh  cJsonWriter.cc  cJsonWriter.hh
src/daemon/service/: KrillKounter.service
src/utils/: log-event.cc  log-event.hh
